--- a/.github/workflows/build-artifacts-only.yml
+++ b/.github/workflows/build-artifacts-only.yml
@@ -33,7 +33,7 @@ on:
   workflow_dispatch:
     inputs:
       artifact_retention_days:
-        description: 'Number of days to retain artifacts (1-90)'
+        description: Number of days to retain artifacts (1-90)
         required: false
         default: '7'
         type: string
@@ -64,42 +64,42 @@ jobs:
   build-wheels:
     name: Build Wheel - ${{ matrix.platform.runner }} - ${{ matrix.platform.target }}
     runs-on: ${{ matrix.platform.runner }}
-    
+
     strategy:
       fail-fast: false
       matrix:
         platform:
           # Linux (glibc) - Standard Linux distributions
-          - runner: ubuntu-22.04
-            target: x86_64
-            manylinux: auto
-          - runner: ubuntu-22.04
-            target: aarch64
-            manylinux: auto
-          
+        - runner: ubuntu-22.04
+          target: x86_64
+          manylinux: auto
+        - runner: ubuntu-22.04
+          target: aarch64
+          manylinux: auto
+
           # Linux (musl) - Alpine Linux and minimal containers
-          - runner: ubuntu-22.04
-            target: x86_64
-            manylinux: musllinux_1_2
-          - runner: ubuntu-22.04
-            target: aarch64
-            manylinux: musllinux_1_2
-          
+        - runner: ubuntu-22.04
+          target: x86_64
+          manylinux: musllinux_1_2
+        - runner: ubuntu-22.04
+          target: aarch64
+          manylinux: musllinux_1_2
+
           # Windows
-          - runner: windows-latest
-            target: x64
-            manylinux: default
-          
+        - runner: windows-latest
+          target: x64
+          manylinux: default
+
           # macOS (Intel)
-          - runner: macos-13
-            target: x86_64
-            manylinux: default
-          
+        - runner: macos-13
+          target: x86_64
+          manylinux: default
+
           # macOS (Apple Silicon)
-          - runner: macos-14
-            target: aarch64
-            manylinux: default
-    
+        - runner: macos-14
+          target: aarch64
+          manylinux: default
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -139,7 +139,7 @@ jobs:
       run: |
         echo "📦 Built wheels:"
         ls -lh python/dist/
-        
+
         echo ""
         echo "🔍 Wheel details:"
         python -m pip install --upgrade pip wheel
@@ -168,7 +168,7 @@ jobs:
   build-sdist:
     name: Build Source Distribution
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -207,7 +207,7 @@ jobs:
       run: |
         echo "📦 Built source distribution:"
         ls -lh python/dist/
-        
+
         echo ""
         echo "🔍 Sdist contents:"
         tar -tzf python/dist/*.tar.gz | head -30
@@ -233,7 +233,7 @@ jobs:
     needs: [build-wheels, build-sdist]
     if: always()
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Download all artifacts for summary
       uses: actions/download-artifact@v4
@@ -248,55 +248,55 @@ jobs:
         echo "**Ref**: ${{ github.ref }}" >> $GITHUB_STEP_SUMMARY
         echo "**Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        
+
         echo "## 📊 Job Status" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
         echo "|-----|--------|" >> $GITHUB_STEP_SUMMARY
-        
+
         # Build Wheels
         if [ "${{ needs.build-wheels.result }}" = "success" ]; then
           echo "| 🔨 Build Wheels | ✅ Success (7 platforms) |" >> $GITHUB_STEP_SUMMARY
         else
           echo "| 🔨 Build Wheels | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
         fi
-        
+
         # Build sdist
         if [ "${{ needs.build-sdist.result }}" = "success" ]; then
           echo "| 📦 Source Distribution | ✅ Success |" >> $GITHUB_STEP_SUMMARY
         else
           echo "| 📦 Source Distribution | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
         fi
-        
+
         echo "" >> $GITHUB_STEP_SUMMARY
-        
+
         # Artifact details
         echo "## 📦 Generated Artifacts" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        
+
         if [ -d "all-artifacts" ]; then
           echo "### Artifact Breakdown" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          
+
           total_size=0
           wheel_count=0
-          
+
           for artifact_dir in all-artifacts/*/; do
             if [ -d "$artifact_dir" ]; then
               artifact_name=$(basename "$artifact_dir")
               echo "📁 $artifact_name:" >> $GITHUB_STEP_SUMMARY
-              
+
               for file in "$artifact_dir"*; do
                 if [ -f "$file" ]; then
                   filename=$(basename "$file")
                   size=$(stat -c%s "$file" 2>/dev/null || stat -f%z "$file" 2>/dev/null || echo "0")
                   size_mb=$(echo "scale=2; $size / 1048576" | bc 2>/dev/null || echo "N/A")
-                  
+
                   echo "  - $filename (${size_mb} MB)" >> $GITHUB_STEP_SUMMARY
-                  
+
                   total_size=$((total_size + size))
-                  
+
                   if [[ "$filename" == *.whl ]]; then
                     wheel_count=$((wheel_count + 1))
                   fi
@@ -305,12 +305,12 @@ jobs:
               echo "" >> $GITHUB_STEP_SUMMARY
             fi
           done
-          
+
           echo '```' >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
+
           total_size_mb=$(echo "scale=2; $total_size / 1048576" | bc 2>/dev/null || echo "N/A")
-          
+
           echo "### Summary Statistics" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Total Wheels**: $wheel_count" >> $GITHUB_STEP_SUMMARY
@@ -319,9 +319,9 @@ jobs:
         else
           echo "⚠️  No artifacts found" >> $GITHUB_STEP_SUMMARY
         fi
-        
+
         echo "" >> $GITHUB_STEP_SUMMARY
-        
+
         # Overall status
         if [ "${{ needs.build-wheels.result }}" = "success" ] && \
            [ "${{ needs.build-sdist.result }}" = "success" ]; then
@@ -339,8 +339,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Some build jobs failed. Please review the logs above." >> $GITHUB_STEP_SUMMARY
         fi
-        
+
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "---" >> $GITHUB_STEP_SUMMARY
         echo "*Generated by Build Artifacts Only Workflow*" >> $GITHUB_STEP_SUMMARY
-
