--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -46,14 +46,15 @@ repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
 
+# Enable vendored OpenSSL for aarch64 cross-compilation
+# Cross-compilation containers lack aarch64-specific OpenSSL dev packages
+[target.aarch64-unknown-linux-gnu]
+[target.aarch64-unknown-linux-gnu.dependencies]
+openssl = {version = "0.10", features = ["vendored"]}
+
 # Enable vendored OpenSSL for musl targets (Alpine Linux)
 # musl containers don't have OpenSSL dev packages, so we compile from source
 [target.'cfg(target_env = "musl")'.dependencies]
-openssl = {version = "0.10", features = ["vendored"]}
-
-# Enable vendored OpenSSL for aarch64 cross-compilation
-# Cross-compilation containers lack aarch64-specific OpenSSL dev packages
-[target.aarch64-unknown-linux-gnu.dependencies]
 openssl = {version = "0.10", features = ["vendored"]}
 
 [target.'cfg(unix)'.dependencies]
