--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -20,7 +20,7 @@ description = "Production-grade Python bindings for GraphBit agentic workflow au
 documentation = "https://docs.graphbit.ai"
 homepage = "https://graphbit.ai"
 keywords = ["ai", "automation", "workflow", "agent", "llm"]
-license = {file = "../LICENSE.md"}
+license = {file = "LICENSE.md"}
 name = "graphbit"
 readme = "../README.md"
 repository = "https://github.com/InfinitiBit/graphbit"
