--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json.workspace = true
 tempfile.workspace = true
 tokio.workspace = true
 aws-sdk-bedrockruntime.workspace = true
+aws-config.workspace = true
 
 [dev-dependencies]
 pyo3 = {workspace = true, features = ["auto-initialize"]}
@@ -126,6 +127,7 @@ tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json"]}
 uuid = {version = "1.8", features = ["v4", "v5", "serde"]}
 #AWS Bedrock SDK
 aws-sdk-bedrockruntime = "1.23.0"
+aws-config = "1.8.8"
 
 [workspace.lints.clippy]
 # Set lint groups with proper priority hierarchy
