--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -22,6 +22,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
 aws-sdk-bedrockruntime.workspace = true
+aws-config.workspace = true
 
 [features]
 default = []
